Replace CopyPlugin with a combo of raw-loader and HtmlWebPackPlugin, Quick css fixes in regards to hover states and header spacing issues in both the home page and the travelInfo page

--- a/src/client/css/home/header.scss
+++ b/src/client/css/home/header.scss
@@ -44,18 +44,20 @@ header {
 .nav-links li {
   display: inline-block;
   padding: 0 5%;
+  // margin-left: 30px;
 }
 
 .nav-links li a {
   text-decoration: none;
   color: #8105d8;
+  margin: 0 30px;
 }
 
 /* Classes that are used in dom.js */
 .header-tab {
   background-color: #b7efcd;
   transition: 0.5s;
-  margin-top: -1%;
+  // margin-top: -1%;
 }
 
 /* Tablet size */
