--- a/src/client/css/home/main.scss
+++ b/src/client/css/home/main.scss
@@ -108,6 +108,10 @@
   box-shadow: none;
 }
 
+.btn-inputform:hover {
+  color: #f5a31a;
+}
+
 .add-destination {
   display: flex;
   justify-content: flex-start;
