--- a/src/client/css/styles-travelinfo.scss
+++ b/src/client/css/styles-travelinfo.scss
@@ -126,7 +126,7 @@ main {
 }
 
 .btn:hover {
-  color: #fff;
+  color: #75daad;
 }
 
 
